--- a/report_builder/static/report_builder/partials/display_field.html
+++ b/report_builder/static/report_builder/partials/display_field.html
@@ -25,6 +25,7 @@
       <option value="Avg">Avg</option>
       <option value="Max">Max</option>
       <option value="Min">Min</option>
+      <option value="Concat">Concat</option>
     </select>
   </div>
   <div class="col_format" flex="">
